--- a/indexY.html
+++ b/indexY.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <style></style>
   </head>
-  <body></body>
+  <body>
+    <h1>hello my first git!</h1>
+  </body>
 </html>
